@@ -92,6 +92,7 @@ static const char* Copyright = "(C) Copyright Michigan State University 2008, Al
 #include "CGammaBand.h"
 #include "CGammaContour.h"
 #include <assert.h>
+#include <TH2I.h>
 
 
 #ifdef HAVE_STD_NAMESPACE
@@ -119,8 +120,8 @@ CGamma2DL::CGamma2DL(const std::string& rName, UInt_t nId,
 			     0.0,    (Float_t)(nXScale ),
 			     0.0,    (Float_t)(nYScale)),
 		 rParameters),
-  m_nXScale(nXScale),
-  m_nYScale(nYScale)
+  m_nXScale(nXScale + 2),
+  m_nYScale(nYScale + 2)
 {
 
   // The assumption is all parameters have the same units.
@@ -128,6 +129,12 @@ CGamma2DL::CGamma2DL(const std::string& rName, UInt_t nId,
   AddAxis(nXScale, 0.0, (Float_t)(nXScale - 1), rParameters[0].getUnits());
   AddAxis(nYScale, 0.0, (Float_t)(nYScale - 1), rParameters[0].getUnits());
 
+  m_pRootSpectrum = new TH2I(
+    rName.c_str(), rName.c_str(),
+    nXScale, static_cast<Double_t>(0.0), static_cast<Double_t>(nXScale),
+    nYScale, static_cast<Double_t>(0.0), static_cast<Double_t>(nYScale)
+  );
+  m_pRootSpectrum->Adopt(0, nullptr);
   CreateStorage();
   
   
@@ -162,16 +169,29 @@ CGamma2DL::CGamma2DL(const std::string& rName, UInt_t nId,
   CGammaSpectrum(rName, nId,
 	    CreateAxisVector(rParameters, nXScale, nYScale,
 			     xLow, xHigh, yLow, yHigh), rParameters),
-  m_nXScale(nXScale),
-  m_nYScale(nYScale)
+  m_nXScale(nXScale + 2),
+  m_nYScale(nYScale + 2)
 {
   // The assumption is all paramters have the same units.
   AddAxis(nXScale, xLow, xHigh, rParameters[0].getUnits());
   AddAxis(nYScale, yLow, yHigh, rParameters[0].getUnits());
 
+  m_pRootSpectrum = new TH2I(
+    rName.c_str(), rName.c_str(),
+    nXScale, static_cast<Double_t>(xLow), static_cast<Double_t>(xHigh),
+    nYScale, static_cast<Double_t>(yLow), static_cast<Double_t>(yHigh)
+  );
+  m_pRootSpectrum->Adopt(0, nullptr);
   CreateStorage();
 }
-
+/**
+ * destructor
+ */
+CGamma2DL::~CGamma2DL()
+{
+  m_pRootSpectrum->fArray = nullptr;
+  delete m_pRootSpectrum;
+}
 
 //////////////////////////////////////////////////////////////////////
 //
@@ -184,9 +204,9 @@ CGamma2DL::CGamma2DL(const std::string& rName, UInt_t nId,
 ULong_t
 CGamma2DL::operator[] (const UInt_t* pIndices) const
 {
-  UInt_t* pStorage = (UInt_t*)getStorage();
-  UInt_t nx = pIndices[0];
-  UInt_t ny = pIndices[1];
+  
+  Double_t nx = pIndices[0];
+  Double_t ny = pIndices[1];
   if (nx >= Dimension(0)) {
     throw CRangeError(0, Dimension(0)-1, nx,
 		      std::string("Indexing 2DW gamma spectrum x axis"));
@@ -195,7 +215,8 @@ CGamma2DL::operator[] (const UInt_t* pIndices) const
     throw CRangeError(0, Dimension(1)-1, ny,
 		      std::string("Indexing 2DW gamma spectrum y axis"));
   }
-  return (ULong_t)pStorage[nx + (ny * m_nXScale)];
+  Int_t bin = m_pRootSpectrum->FindBin(nx, ny);
+  return static_cast<ULong_t>(m_pRootSpectrum->GetBinContent(bin));
 }
 
 ///////////////////////////////////////////////////////////////////////////
@@ -210,9 +231,8 @@ CGamma2DL::operator[] (const UInt_t* pIndices) const
 void
 CGamma2DL::set (const UInt_t* pIndices, ULong_t nValue)
 {
-  UInt_t* pStorage = (UInt_t*)getStorage();
-  UInt_t nx = pIndices[0];
-  UInt_t ny = pIndices[1];
+  Double_t nx = pIndices[0];
+  Double_t ny = pIndices[1];
   if (nx >= Dimension(0)) {
     throw CRangeError(0, Dimension(0)-1, nx,
 		      std::string("Indexing 2DW gamma spectrum x axis"));
@@ -221,7 +241,8 @@ CGamma2DL::set (const UInt_t* pIndices, ULong_t nValue)
     throw CRangeError(0, Dimension(1)-1, ny,
 		      std::string("Indexing 2DW gamma spectrum y axis"));
   }
-  pStorage[nx + (ny * m_nXScale)] = (UInt_t)nValue;
+  Int_t bin = m_pRootSpectrum->FindBin(nx, ny);
+  m_pRootSpectrum->SetBinContent(nx, ny, static_cast<Double_t>(nValue));
 }
 
 
@@ -342,36 +363,48 @@ CGamma2DL::Dimension(UInt_t n) const
 void
 CGamma2DL::Increment(vector<pair<UInt_t, Float_t> >& rParameters)
 {
-  UInt_t* pStorage = (UInt_t*)getStorage();
+
 
   if (rParameters.size() > 0) {
     for(int i = 0; i < rParameters.size() - 1; i++) {
       for(int j = i+1; j < rParameters.size(); j++ ) {
-	UInt_t  parx = rParameters[i].first;
-	Float_t xval = rParameters[i].second;
-	
-	UInt_t  pary = rParameters[j].first;
-	Float_t yval = rParameters[j].second;
-	
-	// transform -> Spectrum coordinates and increment.
-	
-  Int_t x = (Int_t)ParameterToAxis(0, xval);
-	Int_t y = (Int_t)ParameterToAxis(1, yval);
-	bool xok = checkRange(x, m_nXScale, 0);
-  bool yok = checkRange(y, m_nYScale, 1);
         
-	if (xok && yok) {
-	  pStorage[x + y*m_nXScale]++;
-	}     }
+        Double_t xval = rParameters[i].second;
+        Double_t yval = rParameters[j].second;
+        
+        m_pRootSpectrum->Fill(xval, yval);
+      }
     }
   }
 }
 
-//! Incrementing with 2d deluxe increment is ann error:
+//! Incrementing with 2d deluxe increment is an error:
 
 void
 CGamma2DL::Increment(std::vector<std::pair<UInt_t, Float_t> >& xParameters,
 		     std::vector<std::pair<UInt_t, Float_t> >& yParameters)
 {
   throw CException("Gamma 2d Deluxe increment called on CGamma2DL");
+}
+
+/**
+ * setStorage
+ *    Replace spectrum storage with a different chunk of storage.
+ * @param pStorage - pointer to new storage.
+ */
+void
+CGamma2DL::setStorage(Address_t pStorage)
+{
+  m_pRootSpectrum->fArray = reinterpret_cast<Int_t*>(pStorage);
+  m_pRootSpectrum->fN     = m_nXScale * m_nYScale;
+}
+/**
+ * StorageNeeded
+ *
+ * @return Size_t number of bytes of spectrum storage needed.
+ */
+Size_t
+CGamma2DL::StorageNeeded() const
+{
+  return static_cast<Size_t>(m_nXScale * m_nYScale * sizeof(Int_t));
 }
