@@ -98,12 +98,14 @@
 //  Forward class definition:
 
 class CParameter;
+class TH2I;                // 32 bit root 2d spectrum.
 
 
 class CGamma2DL : public CGammaSpectrum
 {
   UInt_t m_nXScale;		//!< X channel count.
   UInt_t m_nYScale;		//!< Y Channel count.
+  TH2I*  m_pRootSpectrum;
   
 public:
 
@@ -120,11 +122,8 @@ public:
 	    Float_t yLow, Float_t yHigh);
 
 
-  // Constuctor for use by derived classes
-  //  CGamma2DL(const std::string& rName, UInt_t nId,
-  //    std::vector<CParameter>& rParameter);
 
-  virtual  ~ CGamma2DL( ) { }       //Destructor	
+  virtual  ~ CGamma2DL( ) ;
 private:
 			//Copy constructor [illegal]
 
@@ -189,6 +188,9 @@ public:
   virtual void Increment(std::vector<std::pair<UInt_t, Float_t> >& rParameters);
   virtual void Increment(std::vector<std::pair<UInt_t, Float_t> >& xParameters,
 			 std::vector<std::pair<UInt_t, Float_t> >& yParameters);
+  virtual void setStorage(Address_t pStorage);
+  virtual Size_t StorageNeeded() const;
+  
  private:
   static CSpectrum::Axes CreateAxisVector(std::vector<CParameter>& rParams,
 					  UInt_t nXchan, UInt_t nYchan,
